<?xml version="1.0"?>
<package format="2">
    <name>cs685</name>
    <version>0.0.0</version>
    <description>

        The move_base package provides an implementation of an action that, given a goal in the world, will attempt to reach it with a mobile base. 

    </description>
    <author>Hoang-Dung Bui</author>
    <maintainer email="bui.hoangdungtn@gmail.com">Dzung Bui!!</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>

<!--     <depend>actionlib</depend>
    <depend>actionlib_msgs</depend> -->
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>move_base_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
    <depend>base_local_planner</depend>
    <depend>clear_costmap_recovery</depend>
    <depend>cs685_navfn</depend>
    <depend>rotate_recovery</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>message_generation</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>

</package>
